# grammar_improved_index

./: CMakeLists.txt  README.md  SelfGrammarIndex.cpp  SelfGrammarIndex.h  SelfGrammarIndexBS.cpp  SelfGrammarIndexBS.h  SelfGrammarIndexBSQ.cpp  SelfGrammarIndexBSQ.h  SelfGrammarIndexPT.cpp  SelfGrammarIndexPT.h  SelfGrammarIndexPTS.cpp  SelfGrammarIndexPTS.h  binary_relation.cpp  binary_relation.h  build_idx.sh  compressed_grammar.cpp  compressed_grammar.h  config.sh  config_macros.h.in  extract_exp.sh  lenght_pattern_perform.sh  locate.sh  main.cpp  run.sh  run_build.sh  run_experiments.sh  simple_grid.cpp  simple_grid.h
bench/: bench_Z_compression.cpp  bench_bp_tree.cpp  bench_break_down_space.cpp  bench_collections.cpp  bench_compare_rules.cpp  bench_dfuds_tree.cpp  bench_edit_distance_graph_build.cpp  bench_expand_rule.cpp  bench_find_ranges_pattern_len.cpp  bench_find_second_occ.cpp  bench_locate.cpp  bench_locate_bs.cpp  bench_pattern_len_display.cpp  bench_pattern_len_locate.cpp  bench_pattern_len_other_display.cpp  bench_pattern_len_other_locate.cpp  bench_qgram_cmp_rules.cpp  bench_qgram_display_pattern_len.cpp  bench_qgram_idx_build.cpp  bench_qgram_locate.cpp  bench_qgram_locate_pattern_len.cpp  bench_sl_int_vector.cpp  bench_space.cpp  binary_relation_benchmark.cpp  breakdown_space.cpp  build-indices.cpp  build_indices.cpp  create_files_patterns.cpp  display.sh  display_indices.cpp  extract_div.cpp  grammar_benchmark.cpp  idx_build.cpp  idx_build_rlcsa.cpp  idx_extract_performance.cpp  idx_locate_performance.cpp  locate.sh  locate_div.cpp  locate_indices.cpp  locate_split_time.cpp  (+12 more)
cmake/: ConfigGBench.cmake  ConfigGTest.cmake
collections/: build-repair-grammar.sh  download-files.sh  escherichia_coli_p_10.ri  process_coll.sh
include/: c_grammar.cpp  c_grammar.hpp  g_index_base.cpp  g_index_base.hpp
indices/r-index/: CMakeLists.txt
indices/uiHRDC/uiHRDC/self-indexes/SLP/libcds/includes/: WaveletTreeNoptrs.h
indices/uiHRDC/uiHRDC/self-indexes/SLP/libcds/src/static/sequence/: WaveletTreeNoptrs.cpp
indices/uiHRDC/uiHRDC/self-indexes/SLP/slp/: CMakeLists.txt  RePairSLPIndex.cpp  RePairSLPIndex.h  SLPIndex.cpp
indices/uiHRDC/uiHRDC/self-indexes/SLP/slp/BinRel/: LabeledBinaryRelation.cpp
indices/uiHRDC/uiHRDC/self-indexes/SLP/slp/test/: idx_test.cpp
slp-files/: RePairSLPIndex.h
tests/: 2d_generation.cpp  binary_relation_test.cpp  building_csa_lcp_rmq.cpp  collections.cpp  compact_trie_test.cpp  compare_rules_test.cpp  compressed_grammar_test.cpp  count_bitvector_test.cpp  display_test.cpp  expand_rule_test.cpp  locate_bs_test.cpp  sampling_patricia_test.cpp  self_index_PT.cpp  self_index_bin_search.cpp  slp_sampling_test.cpp  suffixes_grammar.cpp  wavelet_tree_ap.cpp  wt_range_search.cpp
tests/utils/: grammar_test.cpp  patricia_tree_test.cpp
trees/: bp_tree.cpp  bp_tree.h  dfuds_tree.cpp  dfuds_tree.h
trees/patricia_tree/: compact_patricia_tree.cpp  compact_patricia_tree.h  patricia_tree.cpp  patricia_tree.h  sampled_patrica_tree.cpp  sampled_patrica_tree.h
trees/trie/: Trie.cpp  Trie.h  compact_trie.cpp  compact_trie.h
utils/: CLogger.cpp  CLogger.h  build_hyb_lz77.h  grammar.cpp  grammar.h
utils/Samplings/: CSD_HTFC.cpp  sampling.cpp
utils/Utils/: deltacodes.cpp
utils/repair/: RePair.cpp  RePair.h  arrayG.cpp  arrayG.h  basics.cpp  basics.h  dictionary.cpp  dictionary.h  hash.cpp  hash.h  heap.cpp  heap.h  records.cpp  records.h
